--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "push": "git add . && git commit -m 'Updated' && git push"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.13.1",
     "jwt-decode": "^4.0.0",
@@ -21,7 +22,8 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
